[workspace]
members = [
    "../lpd",
    "bincode",
    "wire",
    "brontide",
    "shachain",
    "chainntfs",
    "channel",
    "wallet",
    "routing",
    "bitcoin-types",
    "common-types",
    "testenv",
    "rpc/interface",
    "rpc/implementation",
    "rpc/server",
    "rpc/client",
    "connection",
    "state",
    "binformat",
    "processor",
    "onion",
    "channel_machine",
    "internal-event",
    "wire-compatibility",
    "cmd/dump-reader",
]
exclude = ["electrs"]

[package]
name = "lpd"
version = "0.0.0"
description = "The implementation of a Lightning Network node"
license = "Apache-2.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]

[lib]
name = "lpd"

#[[example]]
#name = "wasm-basic"
#crate-type = ["cdylib"]

[[example]]
name = "wasm-runner"

[[example]]
name = "run-lnd"


[dependencies]
wire = { path = "wire", features = ["testing"] }
brontide = { path = "brontide" }
shachain = { path = "shachain" }
chainntfs = { path = "chainntfs" }
channel = { path = "channel" }
wallet = { path = "wallet" }
routing = { path = "routing" }

rand = "0.5.4"
secp256k1 = { git = "https://github.com/LightningPeach/secp256k1-wrapper.git", package = "secp256k1-pure-rust" }
hex = "0.3.2"
hex-literal = "0.2"
tokio = "0.1.11"
futures = "0.1.25"

bitcoin = { git = "https://github.com/LightningPeach/rust-bitcoin.git" }
bitcoin_hashes = "0.7"

serde = "1.0"

[dev-dependencies]
serde_derive = "1.0.70"

[profile.release]
lto = true
