[workspace]
members = [
    "../lpd",
    "bincode",
    "wire",
    "brontide",
    "shachain",
    "chainntfs",
    "channel",
    "wallet",
    "routing",
    "bitcoin-types",
    "common-types",
    "testenv",
    "rpc/interface",
    "rpc/implementation",
    "rpc/server",
    "rpc/client",
    "connection",
    "state",
    "binformat",
    "processor",
    "onion",
    "channel_machine",
    "internal-event",
    "wire-compatibility",
    "cmd/dump-reader",
    "dependencies"
]
exclude = ["electrs"]

[package]
name = "lpd"
version = "0.0.0"
description = "The implementation of a Lightning Network node"
license = "Apache-2.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]

[lib]
name = "lpd"

[[example]]
name = "wasm-runner"

[[example]]
name = "run-lnd"

[profile.release]
lto = true
