[package]
name = "brontide"
version = "0.1.0"
authors = ["BitfuryLightning <lightning@bitfury.com>"]
edition = "2018"

[dependencies]
rand = "0.4"
secp256k1 = { version = "0.12", features = ["rand", "serde"] }
sha2 = "0.8"
byteorder = "1.2"
chacha20-poly1305-aead = "0.1"
hkdf = "0.7"
hex = "0.3"
serde = "1.0"

tokio = "0.1"
bytes = "0.4"

wire = { path = "../wire" }
binformat = { path = "../binformat" }

[features]
testing = []
