[package]
name = "brontide"
version = "0.1.0"
authors = ["BitfuryLightning <lightning@bitfury.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
dependencies = { path = "../dependencies" }
wire = { path = "../wire" }
binformat = { path = "../binformat" }
common-types = { path = "../common-types" }

[[bin]]
name = "main"
path = "src/main_.rs"

[features]
testing = []
