[package]
name = "build_info"
version = "0.1.0"
authors = ["Mykola Sakhno <mykola.sakhno@bitfury.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rustc_version = "0.2"
base32 = "0.4"
serde = { version = "1.0", features = ["derive"] }
semver = "0.9"
bincode = { path = "../bincode" }