[package]
name = "channel"
version = "0.0.0"
authors = ["Mykola Sakhno <mykola.sakhno@bitfury.com>"]
description = "The implementation of a Lightning channel"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "channel"

[dependencies]
rand = "0.6"
secp256k1 = "0.12"
hex = "0.3"
bitcoin = "0.18"
bitcoin_hashes = "0.3"
