[package]
name = "channel"
version = "0.0.0"
authors = ["Mykola Sakhno <mykola.sakhno@bitfury.com>"]
description = "The implementation of a Lightning channel"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "channel"

[dependencies]
rand = "0.6"
hex = "0.3"
bitcoin = { git = "https://github.com/LightningPeach/rust-bitcoin.git" }
bitcoin_hashes = "0.7"

[dependencies.secp256k1]
git = "https://github.com/LightningPeach/secp256k1-wrapper.git"
package = "secp256k1-pure-rust"
# features = ["rand"]
