[package]
name = "common-types"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.6"
sha2 = "0.8"
digest = "0.8"
hex = "0.3"
hex-literal = "0.1"
secp256k1 = { version = "0.12", features = ["serde"] }
binformat = { path = "../binformat" }

[features]
testing = []
