[package]
name = "connection"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
edition = "2018"

[dependencies]
brontide = { path = "../brontide" }
wire = { path = "../wire" }
state = { path = "../state" }
routing = { path = "../routing" }

secp256k1 = "0.12"

tokio = "0.1"
futures = "0.1"
rayon = "1.0"

rocksdb = "0.10"
serde = "1.0"
serde_derive = "1.0"

hex = "0.3.2"
