[package]
name = "connection"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
edition = "2018"

[dependencies]
wallet_lib = { package = "wallet", git = "https://github.com/LightningPeach/rust-wallet.git" }
brontide = { path = "../brontide" }
binformat = { path = "../binformat" }
wire = { path = "../wire" }
processor = { path = "../processor" }
state = { path = "../state" }
interface = { path = "../rpc/interface", optional = true }
routing = { path = "../routing", features = ["rpc"] }
channel_machine = { path = "../channel_machine" }
common-types = { path = "../common-types" }

secp256k1 = "0.12"

tokio = "0.1"
futures = "0.1"
rayon = "1.0"

rocksdb = "0.10"
serde = "1.0"
serde_derive = "1.0"

hex = "0.3.2"
either = "1.5.0"
chrono = "0.4"

[features]
rpc = ["interface"]
