[package]
name = "connection"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

dependencies = { path = "../dependencies" }
wallet_lib = { package = "wallet", git = "https://github.com/LightningPeach/rust-wallet.git" }
brontide = { path = "../brontide" }
binformat = { path = "../binformat" }
wire = { path = "../wire" }
internal-event = { path = "../internal-event" }
processor = { path = "../processor" }
state = { path = "../state" }
interface = { path = "../rpc/interface", optional = true }
routing = { path = "../routing", features = ["rpc"] }
channel_machine = { path = "../channel_machine" }
common-types = { path = "../common-types" }


[features]
rpc = ["interface"]
