[package]
name = "onion"
version = "0.1.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
hex = "0.3"
secp256k1 = { version = "0.12", features = ["rand", "serde"] }
hmac = "0.7"
chacha = "0.3"
bytes = "0.4"
sha2 = "0.8.0"
serde = "1.0"
serde_derive = "1.0"

wire = { path = "../wire" }
binformat = { path = "../binformat" }
common-types = { path = "../common-types" }

[dev-dependencies]
rand = "0.4"
wire = { path = "../wire", features = ["testing"] }
