[package]
name = "onion"
version = "0.1.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dependencies = { path = "../dependencies" }
wire = { path = "../wire" }
binformat = { path = "../binformat" }
common-types = { path = "../common-types" }

