[package]
name = "processor"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
edition = "2018"

[dependencies]
dependencies = { path = "../dependencies" }
binformat = { path = "../binformat" }
wire = { path = "../wire" }
internal-event = { path = "../internal-event" }
