[package]
name = "routing"
version = "0.1.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
state = { path = "../state" }
interface = { path = "../rpc/interface", optional = true }
wire = { path = "../wire" }
binformat = { path = "../binformat" }
dijkstras_search = { git = "https://github.com/LightningPeach/dijkstras_search" }
specs = "0.14"
specs-derive = "0.4"
tokio = "0.1"
rocksdb = "0.10"
serde = "1.0"
serde_derive = "1.0"
either = "1.5.0"

[dev-dependencies]
hex-literal = "0.1.1"
wire = { path = "../wire", features = ["testing"] }

[features]
rpc = ["interface"]
