[package]
name = "routing"
version = "0.1.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
dependencies = { path = "../dependencies" }
state = { path = "../state" }
interface = { path = "../rpc/interface", optional = true }
wire = { path = "../wire" }
binformat = { path = "../binformat" }
common-types = { path = "../common-types" }
processor = { path = "../processor" }

[features]
rpc = ["interface"]
