[package]
name = "rpc-server"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]

[[bin]]
name = "rpc-server"

[build-dependencies]
protoc-rust-grpc = "0.6.*"

[dependencies]
grpc = "0.6.*"
protobuf = "2.2.*"

futures = "0.1.*"
tls-api = "0.1.*"
tls-api-native-tls = "0.1.*"
httpbis = "0.7.*"

routing = { path = "../routing" }
wire = { path = "../wire" }
