[package]
name = "testenv"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
edition = "2018"

[dependencies]
wire = { path = "../wire" }
brontide = { path = "../brontide" }
lnd-rust = "0.4"
grpc = "0.6"
futures = "0.1"
lazycell = "1.2"
hex = "0.3"
bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git" }
bitcoin = "0.14.0"
