[package]
name = "testenv"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>"]
edition = "2018"

[dependencies]
wire = { path = "../wire" }
brontide = { path = "../brontide" }
lnd-rust = { git = "https://github.com/LightningPeach/lnd-rust-2" }
grpc = "0.6"
futures = "0.1"
lazycell = "1.2"
hex = "0.3"
bitcoin_rpc_client = { git = "https://github.com/LightningPeach/bitcoinrpc-rust-client.git", package = "bitcoincore-rpc" }
bitcoin = { git = "https://github.com/LightningPeach/rust-bitcoin.git" }
client = { path = "../rpc/client" }
interface = { path = "../rpc/interface" }
