[package]
name = "wire"
version = "0.1.0"
description = "The implementation of the Lightning Network wire protocol"
license = "Apache-2.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[lib]
name = "wire"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

dependencies = { path = "../dependencies" }
bincode = { path = "../bincode" }
common-types = { path = "../common-types" }
bitcoin-types = { path = "../bitcoin-types" }
binformat = { path = "../binformat"}

[dev-dependencies]
common-types = { path = "../common-types", features = ["testing"] }
#pretty_assertions

[features]
testing = []
