[package]
name = "client"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[[bin]]
name = "client"

[lib]
name = "client"

[dependencies]
grpc = "0.6.*"
tls-api = "0.1.*"
tls-api-native-tls = "0.1.*"
tls-api-stub = "0.1.*"
httpbis = "0.7.*"
futures = "0.1.*"
native-tls = "0.2"

interface = { path = "../interface" }
