[package]
name = "client"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[[bin]]
name = "client"

[lib]
name = "client"

[dependencies]
grpc = "0.6.*"
tls-api = "0.2.0"
tls-api-native-tls = "0.2.0"
tls-api-stub = "0.2.0"
httpbis = "0.7.*"
futures = "0.1.*"
native-tls = "0.2.3"

interface = { path = "../interface" }
