[package]
name = "client"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[[bin]]
name = "client"

[lib]
name = "client"

[dependencies]
grpc = "0.6.*"
structopt = "0.3"
dependencies = { path = "../../dependencies" }
interface = { path = "../interface" }

