[package]
name = "implementation"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
grpc = "0.6"
protobuf = "2.3"

interface = { path = "../interface" }
wire = { path = "../../wire" }
internal-event = { path = "../../internal-event" }
connection = { path = "../../connection", features = ["rpc"] }
state = { path = "../../state" }
wallet_lib = { package = "wallet", git = "https://github.com/LightningPeach/rust-wallet.git" }
bitcoin = "0.18"
bitcoin_hashes = "0.3"

futures = "0.1"
hex = "0.3"
secp256k1 = "0.12"
