[package]
name = "implementation"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
dependencies = { path = "../../dependencies" }
interface = { path = "../interface" }
wire = { path = "../../wire" }
internal-event = { path = "../../internal-event" }
connection = { path = "../../connection", features = ["rpc"] }
state = { path = "../../state" }
wallet_lib = { package = "wallet", git = "https://github.com/LightningPeach/rust-wallet.git" }
