[package]
name = "interface"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[dependencies]
dependencies = { path = "../../dependencies" }

# TODO(mkl): move them into `dependencies`. Currently atomatically generated code does not work with reexported crates.
grpc = "0.6"
protobuf = "2.8"

[build-dependencies]
protoc-rust-grpc = "0.6"
