[package]
name = "server"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[[bin]]
name = "server"

[dependencies]
grpc = "0.6.*"
dependencies = { path = "../../dependencies" }
implementation = { path = "../implementation" }
connection = { path = "../../connection" }
