[package]
name = "server"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[[bin]]
name = "server"

[dependencies]
grpc = "0.6.*"
structopt = "0.3"
dependencies = { path = "../../dependencies" }
implementation = { path = "../implementation" }
connection = { path = "../../connection" }
base32 = "0.4"

[build-dependencies]
chrono = "0.4"
rustc_version = "0.2"
base32 = "0.4"
