[package]
name = "server"
version = "0.0.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
edition = "2018"

[[bin]]
name = "server"

[dependencies]
grpc = "0.6.*"
structopt = "0.3"
dependencies = { path = "../../dependencies" }
implementation = { path = "../implementation" }
connection = { path = "../../connection" }
base32 = "0.4"
build_info = { path = "../../build_info" }

[build-dependencies]
build_info = { path = "../../build_info" }
